--- a/html/popularDestinations.html
+++ b/html/popularDestinations.html
@@ -61,7 +61,7 @@
 
 <!--Checklist Intro -->
 <div class="location-info">
-  <div class="info-header">Vacation Mind's Checklist</div>
+  <div class="info-header">Top 10 Destinations</div>
   <div class="info-about">Struggling to find your next destination for an upcoming trip! Take a look at 2022's most popular
     vacation spots to give yourself some ideas!
   </div>
